<resources>
    <string name="app_name">Authentication using sql</string>
    <string name="welcome_to_the_app">Welcome to the app!!</string>
    <string name="don_t_have_account">Don\'t have account ?</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign in</string>
</resources>